styles/_rentman.scss
/* ... */
.article-body ol > li {
  position: relative;
  padding-left: 36px;
  counter-increment: list;
  margin-bottom: 16px !important;
}

.article-body ol > li::before {
  position: absolute;
  top: 0px;
  left: 0;
  content: counter(list);
  text-align: center;
  font-size: 14px;
  width: 25px;
  height: 25px;
  background-color: #e6e6e6;
  border-radius: 50%;
  z-index: 1;
  color: #2c2d30;
  line-height: 24px;
}

/* Used inline in article text */
.article-body .material-icons {
  font-size: inherit !important;
  vertical-align: middle;
  margin-right: 2px;
}

/* Section articles */
.recent-articles ul,
.section-articles-list {
  list-style-type: disc;
  color: #818a91;
  margin-left: 20px;
  margin-bottom: 10px;
  padding-left: 0;
}

.recent-articles ul li,
.section-articles-list li {
  margin-bottom: 10px;
}

/* Table of contents */
.article-container {
  /* Container for the ToC */
  position: relative;
}

.table-of-contents {
  width: 33.33333%;
  padding-top: 50px;
}

@media (max-width: 1024px) {
  .table-of-contents {
    width: 100%;
    padding-left: 0;
    -webkit-box-ordinal-group: 1;
    -ms-flex-order: 0;
    order: 0;
    position: relative;
    max-height: unset;
  }
}

.table-of-contents__list {
  list-style: none;
  padding-left: 0;

  max-height: 500px;
  overflow-y: auto;
}

@media (max-width: 1024px) {
  .table-of-contents__list {
    max-height: unset;
  }
}

.table-of-contents__list.is-fixed {
  padding-top: 50px;
}

/* Fixed mobile ToC is stuck to the header, so no extra padding needed */
.table-of-contents__list.is-mobile.is-fixed {
  padding-top: 0;
}

.table-of-contents__list.is-mobile {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-flow: column;
  flex-flow: column;
  position: relative;
}

.table-of-contents__list.is-mobile.is-fixed {
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  z-index: 2;
}

.table-of-contents__list.is-mobile.is-fixed .table-of-contents__link {
  border-color: transparent !important;
  border-bottom: 1px solid #e8e8e8 !important;
}

.table-of-contents__list.is-mobile.is-fixed.is-opened {
  background-color: #fff;
}

.table-of-contents__list.is-mobile.is-fixed.is-opened .table-of-contents__item {
  display: block !important;
}

.table-of-contents__list.is-mobile.is-fixed.is-opened:after {
  content: "\f068";
}

.table-of-contents__list.is-mobile .table-of-contents__item {
  -webkit-box-ordinal-group: 2;
  -ms-flex-order: 1;
  order: 1;
  display: none;
}

.table-of-contents__list.is-mobile .table-of-contents__item.is-active {
  -webkit-box-ordinal-group: 1;
  -ms-flex-order: 0;
  order: 0;
  display: block;
}

.table-of-contents__list.is-mobile .table-of-contents__item .table-of-contents__link {
  border-radius: 0;
  color: #202121 !important; /** Here is the primary color of the theme **/
  background-color: #fff;
  border-color: #e8e8e8;
}

.table-of-contents__list.is-mobile:after {
  font-family: 'FontAwesome';
  content: "\f067";
  font-weight: 300;
  position: absolute;
  top: 8px;
  right: 15px;
  z-index: 4;
  pointer-events: none;
}

.table-of-contents__toggle {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 3;
  cursor: pointer;
}

.table-of-contents__toggle.is-hidden {
  display: none !important;
}

@media (min-width: 768px) {
  .table-of-contents__toggle {
    display: none !important
  }
}

.table-of-contents__item:not(.is-active),
.table-of-contents__item:not(.is-active) > .table-of-contents__link {
  background-color: transparent !important;
  color: #2c2d30 !important; /** Here is the primary color of the theme **/
}

.table-of-contents__link {
  display: block;
  padding: calc(12px * 1.5 / 4) calc(12px * 1.5 );
  border: 1px solid transparent;
  border-radius: 3px;
  font-size: 15px;
}

.is-active .table-of-contents__link {
  background-color: #F2F5F7; /** Here is the primary color of the theme **/
  color: #2c2d30;
  font-weight: 500;
}

/* Articles */
.article-body h2,
.article-body .wysiwyg-font-size-large {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.6;
  display: block;
  padding-bottom: 0px;
  margin-bottom: 8px;
  padding-top: 15px;
}

/* License icons */

.legacy:before {
  font-family: 'RentmanIcons' !important;
  font-style: normal;
  font-weight: normal;
  display: inline-block;
  font-size: 7px;
  vertical-align: center;
  content: '\E900';
  color: #FF6729;
}

/*Big icon indicators for in the headers of the SC*/
.Biglegacy:before {
  font-family: 'RentmanIcons' !important;
  font-style: normal;
  font-weight: normal;
  display: inline-block;
  font-size: 17px;
  vertical-align: center;
  content: '\E900';
  color: #FF6729;
  padding-bottom: 14px;
  padding-top: 8px;
}
/* ... */

